[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphorm"
description = ""
version = "0.2.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = '>=3.10'
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    'redis (>=5.0.1)',
    'prettytable (>=3.8.0)',
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-redis>=3.1.3",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
log_cli = "true"

[tool.hatch.build.targets.wheel]
packages = ["graphorm"]

[project.urls]
Homepage = "https://github.com/hello-tmst/graphorm"
Repository = "https://github.com/hello-tmst/graphorm"
Documentation = "https://github.com/hello-tmst/graphorm#readme"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
