[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphorm"
description = "A modern Python ORM for graph databases (RedisGraph/FalkorDB) with type safety, query builder, and automatic property management"
version = "0.3.4"
readme = "README.md"
license = { text = "MIT" }
requires-python = '>=3.10,<3.14'
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    'redis (>=5.0.1)',
    'prettytable (>=3.8.0)',
    "pytest-timeout>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = "true"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.hatch.build.targets.wheel]
packages = ["graphorm"]

[project.urls]
Homepage = "https://github.com/hello-tmst/graphorm"
Repository = "https://github.com/hello-tmst/graphorm"
Documentation = "https://github.com/hello-tmst/graphorm#readme"

[tool.coverage.run]
source = ["graphorm"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
remove_redundant_aliases = true
force_grid_wrap = 2

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
exclude = ["src/migrations/*"]
fixable = ["Q000", "D102", "D202", "D415", "D102", "D415", "Q001", "D300", "F401", "UP035", "SIM114"]
extend-select = [
    "A",    # flake8-builtins
    "B",   # flake8-bugbear
    "C4",    # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "Q",    # flake-quotes
    "N",    # pep8-naming
    "T20",    # flake8-print
    "I",    # isort
    "S",    # flake8-bandit
    "SIM",    # flake8-simplify
    "C90",    # {name} is too complex
    "RUF100",    # unused noqa
    "UP",  # pyupgrade
]
ignore = ["E712", "N806", "N815", "A001", "A003", "E711", "F841", "B008", "C901", "C408", "SIM102", "ANN401", "S104", "I001", "B904", "UP008", "S101", "S311", "A002", "E501"]
